Fixed undifined document, text wraps, char limit

--- a/client/src/components/Document/DocumentDetail.css
+++ b/client/src/components/Document/DocumentDetail.css
@@ -8,6 +8,7 @@
 
 .document-view-container {
   padding-bottom: 80px;
+  word-wrap: anywhere;
 }
 
 #document-info {
